Fixed Title pages being partially hidden by the nav bar when collapsed

--- a/ituran-dataran/src/components/MainPage/pages/home/style.css
+++ b/ituran-dataran/src/components/MainPage/pages/home/style.css
@@ -1,3 +1,3 @@
 .page-content{
-    padding-left: 51px;
+    padding-left: 71px;
 }
